01-build-cluster/config/aspire/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspire-dashboard
  namespace: observability
spec:
  selector:
    app: aspire-dashboard
  ports:
    - name: web
      port: 18888
      targetPort: web
    - name: otlp
      port: 18889
      targetPort: otlp
